app/src/main/java/com/example/carto/feature/addresses/data/remote/error/GetAddressesError.kt
package com.example.carto.feature.addresses.data.remote.error

sealed interface GetAddressesError {
    data object UnKnown: GetAddressesError
}